# XeEngine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  XeEngine.sln  build.sh
XeSDK/: ContextD3D11.h  ContextD3D11_Context.cpp  ContextD3D11_Drawing2d.cpp  ContextD3D11_States.cpp  ContextD3D11_Surface.cpp  ContextD3D11_Tilemap2d.cpp  ContextGL.h  ContextGL_Context.cpp  ContextGL_Drawing2d.cpp  ContextGL_Library.cpp  ContextGL_Resource.cpp  ContextGL_States.cpp  ContextGL_Tilemap2d.cpp  ContextNull.h  ContextNull_Context.cpp  ContextNull_Drawing2d.cpp  ContextNull_Resource.cpp  ContextNull_States.cpp  ContextNull_Surface.cpp  ContextNull_Tilemap2d.cpp  ShaderD3D11_VSDefault.h  ShaderD3D11_VSDefault.hlsl  XAudioBuffer.cpp  XAudioBuffer.h  XAudioCompatibilityLayer.h  XAudioEngine.cpp  XeApplication.cpp  XeCore.cpp  XeCoreView.cpp  XeCoreView.h  XeCoreView_WinRt.cpp  XeDebugConsole.cpp  XeDebugLog.cpp  XeGameComponentPosition2d.cpp  XeGameComponentTexture2d.cpp  XeGameTiled.cpp  XeGraphicsColor.cpp  XeGraphicsCommon.cpp  XeGraphicsCommon.h  XeGraphicsFont.cpp  (+43 more)
XeSDK/XeSDK.Android/: Main.cpp  XeSDK.Android.vcxproj
XeSDK/XeSDK.Win32/: ContextGL_Win32.cpp  XeCoreMain_Win32.cpp  XeCoreView_Win32.cpp  XeGraphics_Win32.cpp  XeSDK.Win32.vcxproj  XeSDK.Win32.vcxproj.filters
XeSDK/XeSDK.Windows/: XeGraphics_WinRT.cpp  XeSDK.Windows.vcxproj.filters
XeSDK/XeSDK.WindowsPhone/: XeSDK.WindowsPhone.vcxproj
XeSDK/XeSDK.WindowsUniversal/: XeGraphics_WinUniversal.cpp  (+1 more)
include/: XeGame.h  XeSDK.h
include/XeGame/: IAtom.h  (+33 more)
src/: CMakeLists.txt
test/: CMakeLists.txt
(+460 files in other folders)
